<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:padding="@dimen/layout_padding"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mainWelcome"
        style="?attr/textAppearanceBody1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:text="@string/welcome_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mainTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Design.TextInputLayout"
        app:endIconMode="clear_text"
        android:layout_marginVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/mainWelcome"
        app:layout_constraintLeft_toLeftOf="@id/mainWelcome"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:singleLine="true"
            android:inputType="text"
            android:hint="@string/title"
            android:maxLines="1"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mainMessageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Design.TextInputLayout"
        app:endIconMode="clear_text"
        android:layout_marginVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/mainTitleLayout"
        app:layout_constraintLeft_toLeftOf="@id/mainWelcome"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="50dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/mainMessageLayout"
        app:layout_constraintLeft_toLeftOf="@id/mainWelcome"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackCornerRadius="4dp"
        app:trackThickness="6dp"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>